--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "noUncheckedIndexedAccess": false,
+    "noUncheckedIndexedAccess": true,
     "outDir": "dist/"
   }
 }
