Add test runner

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "@tsconfig/node18",
+  "include": ["src", "test"],
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
