--- a/package.json
+++ b/package.json
@@ -10,15 +10,32 @@
   },
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "start": "npm run build && node dist",
-    "start:watch": "nodemon -q --ext ts --exec \"ts-node --esm src/index.ts\""
+    "start:watch": "nodemon -q --ext ts --exec \"ts-node --esm src/index.ts\"",
+    "test": "c8 tap --reporter spec",
+    "test:watch": "tap --watch --coverage"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.13",
+    "@types/tap": "^15.0.8",
+    "c8": "^7.13.0",
     "nodemon": "^2.0.22",
+    "tap": "^16.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "c8": {
+    "all": true,
+    "src": "src/"
+  },
+  "tap": {
+    "node-arg": [
+      "--loader=ts-node/esm",
+      "--no-warnings"
+    ],
+    "coverage": false,
+    "ts": false
   }
 }
