--- a/package.json
+++ b/package.json
@@ -13,29 +13,19 @@
     "build": "tsc --project tsconfig.build.json",
     "start": "npm run build && node dist",
     "start:watch": "nodemon -q --ext ts --exec \"ts-node --esm src/index.ts\"",
-    "test": "c8 tap --reporter spec",
-    "test:watch": "tap --watch --coverage"
+    "test": "tap --reporter terse --passes --show-full-coverage --typecheck",
+    "test:watch": "tap repl w on --passes"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^18.16.16",
-    "@types/tap": "^15.0.8",
-    "c8": "^8.0.0",
-    "nodemon": "^2.0.22",
-    "tap": "^16.3.6",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.8.10",
+    "@types/tap": "^15.0.10",
+    "nodemon": "^3.0.1",
+    "tap": "^18.5.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  },
-  "c8": {
-    "all": true,
-    "src": "src/"
+    "typescript": "^5.2.2"
   },
   "tap": {
-    "node-arg": [
-      "--loader=ts-node/esm",
-      "--no-warnings"
-    ],
-    "coverage": false,
-    "ts": false
+    "coverage-map": "./test-map.js"
   }
 }
