--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,24 @@ services:
     build:
       context: .
     container_name: log-server-http
-    command: ["http", "8080"]
+    command: ["http", "${HTTP_PORT:-8080}"]
     ports:
-      - 8080:8080
+      - "${HTTP_PORT:-8080}:${HTTP_PORT:-8080}"
+
+  log-server-https:
+    build:
+      context: .
+    container_name: log-server-https
+    command: ["https", "${HTTPS_PORT:-8443}"]
+    ports:
+      - "${HTTPS_PORT:-8443}:${HTTPS_PORT:-8443}"
+    volumes:
+      - ./certs:/home/node/certs
 
   log-server-tcp:
     build:
       context: .
     container_name: log-server-tcp
-    command: ["tcp", "4444"]
+    command: ["tcp", "${TCP_PORT:-4444}"]
     ports:
-      - 4444:4444
+      - "${TCP_PORT:-4444}:${TCP_PORT:-4444}"
