--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
   },
   "type": "module",
   "scripts": {
+    "check": "tsc --noEmit",
     "build": "tsc --project tsconfig.build.json",
-    "start": "npm run build && node dist",
-    "start:watch": "NODE_OPTIONS=\"--loader ts-node/esm --no-warnings=ExperimentalWarning\" nodemon -q --ext ts src/index.ts",
-    "test": "tap --reporter terse --passes --show-full-coverage --typecheck",
-    "test:watch": "tap repl w on --passes"
+    "start": "node --import=tsimp/import src/index.ts",
+    "start:watch": "node --import=tsimp/import --watch src/index.ts",
+    "test": "c8 --all ava",
+    "test:watch": "ava --watch"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.17",
-    "@types/tap": "^15.0.11",
-    "nodemon": "^3.0.3",
-    "tap": "^18.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.11.28",
+    "ava": "^6.1.2",
+    "c8": "^9.1.0",
+    "tsimp": "^2.0.11",
+    "typescript": "^5.4.2"
   },
-  "tap": {
-    "coverage-map": "./test-map.js"
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp/import"
+    ]
   }
 }
