--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,5 +32,5 @@ jobs:
           cache: npm
       - name: Install
         run: npm ci
-      - name: Build
+      - name: Check types
         run: npm run check
