--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "check": "tsc --noEmit",
     "build": "tsc --project tsconfig.build.json",
-    "start": "node --import=tsimp/import src/index.ts",
-    "start:watch": "node --watch --import=tsimp/import src/index.ts",
-    "test": "node --test --test-reporter spec --import=tsimp/import test/*.test.ts test/**/*.test.ts",
-    "test:watch": "node --test --watch --import=tsimp/import test/*.test.ts test/**/*.test.ts",
+    "start": "node --import=tsx/esm src/index.ts",
+    "start:watch": "node --watch --import=tsx/esm src/index.ts",
+    "test": "node --test --test-reporter spec --import tsx/esm test/*.test.ts test/**/*.test.ts",
+    "test:watch": "node --test --watch --import=tsx/esm test/*.test.ts test/**/*.test.ts",
     "test:coverage": "c8 --all --src src npm test",
     "test:ci": "c8 --check-coverage --100 --src src npm test"
   },
@@ -23,7 +23,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.7",
     "c8": "^9.1.0",
-    "tsimp": "^2.0.11",
+    "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   }
 }
