--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install
         run: npm ci
       - name: Test
-        run: npm run test:ci
+        run: npm run test:coverage
 
   typecheck:
     runs-on: ubuntu-latest
