--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "check": "tsc --noEmit",
     "start": "node --import=tsx/esm src/index.ts",
     "start:watch": "node --watch --import=tsx/esm src/index.ts",
-    "test": "node --test --test-reporter spec --import tsx/esm test/*.test.ts test/**/*.test.ts",
+    "test": "node --test --import tsx/esm test/*.test.ts test/**/*.test.ts",
     "test:watch": "node --test --watch --import=tsx/esm test/*.test.ts test/**/*.test.ts",
     "test:coverage": "c8 npm test"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.8",
-    "c8": "^9.1.0",
-    "tsx": "^4.9.1",
-    "typescript": "^5.4.5"
+    "@types/node": "^20.16.11",
+    "c8": "^10.1.2",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   },
   "c8": {
     "100": true,
@@ -34,6 +34,10 @@
     "exclude": [
       "src/index.ts"
     ],
-    "check-coverage": true
+    "check-coverage": true,
+    "reporter": [
+      "text",
+      "html"
+    ]
   }
 }
